--- a/partials/edit.html
+++ b/partials/edit.html
@@ -18,7 +18,7 @@
         <div ng-switch-when="0">
           <h1 type="text" ng-bind="campaignTitle"></h1>
           <div ng-include src="&quot;partials/form_not_completed.html&quot;"></div>
-          <button ng-click="togglePanel('Create Question')" class="middle confirm btn">+ New Question</button>
+          <button ng-click="togglePanel('Create Question')" class="outline confirm btn">+ New Question</button>
         </div>
         <div ng-switch-when="1">
           <form method="post" action="">
