--- a/partials/instance.html
+++ b/partials/instance.html
@@ -16,7 +16,7 @@
   </header>
   <div class="form_response">
     <div ng-include="&quot;partials/form_completed.html&quot;" class="questions"></div>
-    <dl> 
+    <dl class="bonus">
       <dt>Bonus:</dt>
       <dd>{{instance.reward.title}}<br/><small>claimed on {{instance.reward.date_claimed}}</small></dd>
     </dl>
