--- a/jade_partials/instance.html.jade
+++ b/jade_partials/instance.html.jade
@@ -12,7 +12,7 @@ article(ng-init='instance.cap = -2')
           i.icon-info-circled-alt
   .form_response
     .questions(ng-include='"partials/form_completed.html"')
-    dl 
+    dl.bonus
       dt Bonus:
       dd {{instance.reward.title}}
         br
