--- a/css/app.css
+++ b/css/app.css
@@ -1494,10 +1494,16 @@ fieldset.padded {
 }
 
 .module .scroller_wrapper {
-  height: 300px;
+  height: 200px;
+  padding: 0;
 }
 
 .module .scroller {
+  margin: 0;
+}
+
+.module .scroller_wrapper .select.expandable .options {
+  max-height: 144px;
 }
 
 /* @end */
